app03-studentGrades/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\bluej\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\bluej\lib\bluejcore.jar;D:\bluej\lib\junit-4.11.jar;D:\bluej\lib\hamcrest-core-1.3.jar;D:\bluej\lib\lang-stride.jar;D:\bluej\lib\javafx\lib\javafx.base.jar;D:\bluej\lib\javafx\lib\javafx.controls.jar;D:\bluej\lib\javafx\lib\javafx.fxml.jar;D:\bluej\lib\javafx\lib\javafx.graphics.jar;D:\bluej\lib\javafx\lib\javafx.media.jar;D:\bluej\lib\javafx\lib\javafx.properties.jar;D:\bluej\lib\javafx\lib\javafx.swing.jar;D:\bluej\lib\javafx\lib\javafx.web.jar;C:\Users\FiercePC\Documents\GitHub\jamesbluej-\app03-studentGrades
-d
C:\Users\FiercePC\Documents\GitHub\jamesbluej-\app03-studentGrades\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\FiercePC\Documents\GitHub\jamesbluej-\app03-studentGrades\Course.java
<---- end of javadoc command ---->
Loading source file C:\Users\FiercePC\Documents\GitHub\jamesbluej-\app03-studentGrades\Course.java...
Constructing Javadoc information...
C:\Users\FiercePC\Documents\GitHub\jamesbluej-\app03-studentGrades\Course.java:16: error: cannot find symbol
    private ArrayList<Module> modules;
            ^
  symbol:   class ArrayList
  location: class Course
1 error
